--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,7 @@
     @apply bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-teal-500 focus:border-teal-500 block w-full p-2.5 
   }
   .btn {
-   @apply text-white bg-teal-500 hover:bg-teal-700 focus:ring-4 focus:outline-none focus:ring-teal-300 font-medium rounded-lg text-sm  sm:w-auto px-5 py-2.5 text-center disabled:bg-teal-500/50
+   @apply text-white bg-teal-500 hover:bg-teal-700 focus:ring-4 focus:outline-none focus:ring-teal-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center disabled:bg-teal-500/50
   }
   .hasError {
     @apply text-rose-600 text-xs leading-4 font-medium py-1;
